<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>magpiebridge</groupId>
	<artifactId>magpiebridge</artifactId>
	<version>0.0.9</version>
	<packaging>jar</packaging>
	<name>magpiebridge</name>
	<url>https://github.com/MagpieBridge/MagpieBridge</url>

	<licenses>
		<license>
			<name>Eclipse Public License 2.0</name>
			<url>https://www.eclipse.org/legal/epl-2.0/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Linghui Luo</name>
			<email>linghui.luo@upb.de</email>
			<organization>Paderborn University</organization>
			<organizationUrl>https://www.hni.uni-paderborn.de/en/software-engineering/</organizationUrl>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<wala.version>1.5.4</wala.version>
		<lsp4j.version>0.8.1</lsp4j.version>
		<javaparser.version>3.13.0</javaparser.version>
		<commonio.version>2.6</commonio.version>
		<commonslang3.version>3.9</commonslang3.version>
		<sun.httpserver.version>20070405</sun.httpserver.version>
		<apache.httpclient.version>4.5.13</apache.httpclient.version>
		<j2html.version>1.4.0</j2html.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.core</artifactId>
			<version>${wala.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.cast</artifactId>
			<version>${wala.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.30</version>
		</dependency>
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>${javaparser.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commonio.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commonslang3.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.net.httpserver</groupId>
			<artifactId>http</artifactId>
			<version>${sun.httpserver.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${apache.httpclient.version}</version>
		</dependency>
		<dependency>
			<groupId>com.j2html</groupId>
			<artifactId>j2html</artifactId>
			<version>${j2html.version}</version>
		</dependency>
        <!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>5.9.0.202009080501-r</version>
        </dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.coveo</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.8</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
    				  <source>8</source>
   			    </configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<scm>
		<connection>scm:git:git@github.com:MagpieBridge/MagpieBridge.git</connection>
		<developerConnection>scm:git:git@github.com:MagpieBridge/MagpieBridge.git</developerConnection>
		<url>https://github.com/MagpieBridge/MagpieBridge/tree/develop</url>
	</scm>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub MagpieBridge Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/MagpieBridge/MagpieBridge</url>
		</repository>
	</distributionManagement>
</project>
